--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.guidezup.guidezapp.MainActivity" />
         </activity>
+        <activity
+            android:name=".Tab2Activity"
+            android:label="@string/title_activity_tab2"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.guidezup.guidezapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
